[package]
name = "rust_rank"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.0"
rayon = "1.7"
clap = { version = "4.0", features = ["derive"] }
bubblemath = "0.1"
graph6-rs = "0.1"
petgraph = "0.6"
image = "0.24" 
quickdiv = "0.1.1"
crossbeam-channel = "0.5"
num-traits = "0.2.19"
nalgebra = "0.33.2"
itertools = "0.14.0"
num = "0.4.3"
once_cell = "1.21.3"
wgpu = "25.0.0"
bytemuck = "1.23.0"
pollster = "0.4.0"
